[[FIX]] Fix z-index and item insertion order into the right slot
- Fix z-index value to 9999
- Fix the item insertion order: the items are now appended to the right of the existing elements when inserted to the right slot too
- Add item insertion order tests for every slot
- Application build

--- a/src/jquery.sticky-header.css
+++ b/src/jquery.sticky-header.css
@@ -12,7 +12,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 999999;
+  z-index: 9999;
 }
 
 [data-sticky-header] [data-sticky-header-container] {
